--- a/style.css
+++ b/style.css
@@ -44,6 +44,21 @@ nav ul li a:hover {
   color: black;
   text-decoration: underline;
 }
+/* search bar styling */
+#searchInput {
+  border-radius: 20px 0 0 20px;
+}
+
+#searchForm button {
+  border-radius: 0 20px 20px 0;
+  background-color: #1A8754;
+  border: none;
+}
+
+#searchForm button:hover {
+  background-color: #166b44;
+}
+
 
 /* --- Footer (Global) --- */
 footer {
@@ -211,14 +226,15 @@ header {
   border-radius: 10px;
   padding: 1rem;
   width: 300px;
-  height: 500px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+   min-height: 400px; /* optional safety */
+  height: auto;      /* ✅ auto adjusts */
+   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   text-align: center;
 }
 
 .product-card img {
   width: 100%;
-  height: 70%;
+   max-height: 250px;
   border-radius: 10px;
 }
 
@@ -248,9 +264,7 @@ header {
   background-color: #4a004a;
 }
 
-/* ===========================
-   Contact Page
-   =========================== */
+/* =========================== Contact Page =========================== */
 #contact-banner {
   background-image: url("images/background.jpg");
   height: 250px;
